[package]
name = "trading-lib"
version = "0.1.0"
authors = ["George Boulougaris <gboulougaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.19"
serde = {version = "1.0.57", features = ["derive"] }
strum = { version = "0.19", features = ["derive"] }

[dev-dependencies]
mockall = "0.8.1"